--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ a:hover{
 }
 /*==========HEADER==========*/
 header {width: 100%; position: absolute; top: 0; left: 0; display: flex; justify-content: space-between; 
-align-items: center; padding: 20px 50px;}
+align-items: center; padding: 20px 50px; background-color: #fff;}
 header img {width: 200px;}
 header nav ul {display: flex;}
 header li a {color: #191c03;}
@@ -29,4 +29,14 @@ header li:last-child {margin-right: 0;}
 @media (max-width: 700px){
     header {flex-direction: column;}
     header img {margin-bottom: 15px;}
+}
+/*==========SECTION HERO==========*/
+.hero {background-image: url(../imagens/hero.jpg); background-size: cover; min-height: 100vh; color: #fff; display: flex;
+justify-content: center; align-items: center; flex-direction: column; text-align: center;}
+.hero h1 {font-size: 3.2rem; margin-bottom: 15px;}
+.hero h3 {font-size: 2rem; margin-bottom: 15px;}
+.hero .btn {background-color: #fff; border-radius: 4px; color: #191c03; padding: 20px 50px; text-transform: uppercase;}
+@media (max-width: 700px){
+    .hero h1 {font-size: 2.5rem;}
+    .hero h3 {font-size: 1.5rem;}
 }
