--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,16 @@ padding: 100px 50px;}
 @media (max-width: 850px){
     .caracteristicas .grid {flex-direction: column;}
 }
+/*==========SECTION NEWSLETTER==========*/
+.newsletter {display: flex; flex-direction: column; align-items: center; padding: 100px 50px;}
+.newsletter h3 {font-size: 2rem; margin-bottom: 35px; color: #191c03; text-align: center;}
+.newsletter p {max-width: 800px; margin-bottom: 35px; color: #191c03; text-align: center;}
+.newsletter hr {width: 200px; height: 2px; background-color: #191c03; margin-bottom: 70px; border: none;}
+.newsletter form {display: flex; justify-content: center; align-items: center; flex-wrap: wrap; width: 80%; 
+max-width: 800px;}
+.newsletter input {padding: 15px; border: 1px solid #191c03; border-radius: 4px; margin-right: 15px; flex: 1;}
+.newsletter button {padding: 15px; background-color: #191c03; color: #fff; text-transform: uppercase; border: none;
+border-radius: 4px; cursor: pointer;}
+@media (max-width: 700px){
+    .newsletter input {flex-basis: 100%; margin-bottom: 15px;}
+}
