--- a/css/style.css
+++ b/css/style.css
@@ -35,26 +35,31 @@ header li:last-child {margin-right: 0;}
 justify-content: center; align-items: center; flex-direction: column; text-align: center;}
 .hero h1 {font-size: 3.2rem; margin-bottom: 15px;}
 .hero h3 {font-size: 2rem; margin-bottom: 15px;}
-.hero .btn {background-color: #fff; border-radius: 4px; color: #191c03; padding: 20px 50px; text-transform: uppercase;}
+.hero .btn {background-color: #fff; border-radius: 4px; color: #191c03; padding: 20px 50px; text-transform: uppercase;
+margin-top: 30px;}
 @media (max-width: 700px){
+    .hero {margin-top: 80px;}
     .hero h1 {font-size: 2.5rem;}
     .hero h3 {font-size: 1.5rem;}
 }
 /*==========SECTION CONHEÇA O HOTEL==========*/
-.conheca-o-hotel {display: flex; flex-direction: column; align-items: center; padding: 100px 50px;}
+.conheca-o-hotel {display: flex; flex-direction: column; align-items: center; padding: 30px 15px;}
 .conheca-o-hotel h3 {font-size: 2rem; margin-bottom: 35px; color: #191c03; text-align: center;}
 .conheca-o-hotel p {max-width: 800px; margin-bottom: 35px; color: #191c03; text-align: center;}
 .conheca-o-hotel hr {width: 200px; height: 2px; background-color: #191c03; margin-bottom: 70px; border: none;}
 .conheca-o-hotel .grid {width: 100%; display: flex; flex-wrap: wrap;}
-.conheca-o-hotel .grid li {height: 350px; padding: 20px; border-radius: 4px; background-clip: content-box;background-size: cover; background-position: center;}
+.conheca-o-hotel .grid li {height: 350px; padding: 5px; border-radius: 4px; background-clip: content-box;background-size: cover; background-position: center;}
 .conheca-o-hotel .grid li.small {flex-basis: 40%;}
 .conheca-o-hotel .grid li.large {flex-basis: 60%;}
 @media (max-width: 700px){
+    .conheca-o-hotel {padding: 1px 1px;}
+    .conheca-o-hotel p {padding: 0 5px;}
+    .conheca-o-hotel hr {margin-bottom: 35px;}
     .conheca-o-hotel .grid li.small, .conheca-o-hotel .grid li.large {flex-basis: 100%;}
 }
 /*==========SECTION CARACTERÍSTICAS==========*/
 .caracteristicas {background-color: #191c03; display: flex; flex-direction: column; align-items: center; 
-padding: 100px 50px;}
+padding: 30px 20px;}
 .caracteristicas h3 {font-size: 2rem; margin-bottom: 35px; color: #fff; text-align: center;}
 .caracteristicas p {max-width: 800px; margin-bottom: 35px; color: #fff; text-align: center;}
 .caracteristicas hr {width: 200px; height: 2px; background-color: #fff; margin-bottom: 70px; border: none;}
@@ -64,10 +69,12 @@ padding: 100px 50px;}
 .caracteristicas .grid li h4 {font-size: 1.5rem; color: #c3c63b; margin-bottom: 30px;}
 .caracteristicas .grid li p {color: #fff;}
 @media (max-width: 850px){
+    .caracteristicas {padding: 5px 5px;}
+    .caracteristicas hr {margin-bottom: 35px;}
     .caracteristicas .grid {flex-direction: column;}
 }
 /*==========SECTION NEWSLETTER==========*/
-.newsletter {display: flex; flex-direction: column; align-items: center; padding: 100px 50px;}
+.newsletter {display: flex; flex-direction: column; align-items: center; padding: 30px 20px;}
 .newsletter h3 {font-size: 2rem; margin-bottom: 35px; color: #191c03; text-align: center;}
 .newsletter p {max-width: 800px; margin-bottom: 35px; color: #191c03; text-align: center;}
 .newsletter hr {width: 200px; height: 2px; background-color: #191c03; margin-bottom: 70px; border: none;}
@@ -77,7 +84,10 @@ max-width: 800px;}
 .newsletter button {padding: 15px; background-color: #191c03; color: #fff; text-transform: uppercase; border: none;
 border-radius: 4px; cursor: pointer;}
 @media (max-width: 700px){
+    .newsletter {padding: 5px 5px;}
+    .newsletter hr {margin-bottom: 35px;}
     .newsletter input {flex-basis: 100%; margin-bottom: 15px;}
+    .newsletter button {margin-bottom: 10px;}
 }
 /*==========FOOTER==========*/
 footer {display: flex; flex-direction: column; align-items: center; background-color: #191c03; padding: 50px 0;}
@@ -86,3 +96,7 @@ footer ul li {margin-right: 10px;}
 footer ul li:last-child {margin-right: 0;}
 footer ul li a {color: #c3c63b; font-size: 2rem;}
 footer p {color: #c3c63b; text-align: center;}
+@media (max-width: 700px){
+    footer {padding: 5px 0;}
+    footer ul {margin-bottom: 10px;}
+}
